[package]
name = "kvs"
version = "0.1.0"
authors = ["Liu Bing <qiao.liubing@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "1.0.7"
predicates = "2.0.1"
tempfile = "3.2.0"
walkdir = "2.3.2"
