[package]
name = "kvs"
version = "0.1.0"
authors = ["Liu Bing <qiao.liubing@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
sled = "0.34.6"

[dev-dependencies]
assert_cmd = "1.0.7"
criterion = "0.3"
predicates = "2.0.1"
rand = "0.8"
tempfile = "3.2.0"
walkdir = "2.3.2"
